--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel = "stylesheet" href = "assets/fonts/font.css">
     <link rel = "stylesheet" href = "assets/font-awesome/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Restoran Pavilion</title>
   </head>
   <body>
